--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.isort]
 profile = "black"
 skip = [".venv"]
-src_paths = ["chicxulub", "tests"]
+src_paths = ["aptstract", "tests"]
 
 [tool.black]
 exclude = '''
@@ -27,5 +27,5 @@ target-version = ['py38', 'py39', 'py310']
 
 [tool.pytest.ini_options]
 norecursedirs = [
-    "bundles/*",
+    "backups/*",
 ]
