add `make build` to create wheel package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,10 @@
 [metadata]
 name = aptstract
-description = My package description
+description = Aptible data migration CLI.
 long_description = file: README.md
 license = All Rights Reserved
+version = 0.0.1
+url='https://github.com/aptible/aptstract/'
 
 [options]
 packages =
@@ -15,6 +17,8 @@ dev =
   black
   isort
   pytest
+  twine
+  build
 
 [options.entry_points]
 console_scripts =
