--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,7 @@ version = 0.0.1
 url='https://github.com/aptible/aptstract/'
 
 [options]
-packages =
-  aptstract
+packages = find:
 install_requires =
   typer
 
@@ -19,6 +18,7 @@ dev =
   pytest
   twine
   build
+  pex
 
 [options.entry_points]
 console_scripts =
