--- a/.github/workflows/pex.yaml
+++ b/.github/workflows/pex.yaml
@@ -24,5 +24,5 @@ jobs:
       run: ./aptstract.pex --help
 
     - name: Upload PEX File to Release
-      if: contains(github.ref, "release")
+      if: contains(github.ref, 'release')
       run: gh release upload ${{ github.event.release.tag_name }} aptstract.pex
