change license to MIT

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = aptstract
 description = Aptible data migration CLI.
 long_description = file: README.md
-license = All Rights Reserved
+license = MIT
 version = 0.0.1
 url='https://github.com/aptible/aptstract/'
 
