Correct login for "gh" program

--- a/.github/workflows/pex.yaml
+++ b/.github/workflows/pex.yaml
@@ -25,4 +25,6 @@ jobs:
 
     - name: Upload PEX File to Release
       if: contains(github.ref, 'tags')
-      run: gh release upload ${{ github.event.release.tag_name }} aptstract.pex
+      run: |
+        echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+        gh release upload ${{ github.event.release.tag_name }} aptstract.pex
