--- a/.github/workflows/pex.yaml
+++ b/.github/workflows/pex.yaml
@@ -24,7 +24,7 @@ jobs:
       run: ./aptstract.pex --help
 
     - name: Upload PEX File to Release
-      if: contains(github.ref, 'tags')
+      if: github.event_name == 'release'
       run: |
         echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
         gh release upload ${{ github.event.release.tag_name }} aptstract.pex
